# dark_arts_tracker

./: .gitignore  README.md  pyproject.toml  ruff.toml
docs/: case_study_findings.md  case_study_verification.md  plan.md
docs/decisions/: 0001-parquet-duckdb-not-postgres.md
notebooks/: 00_form4_smoke.py
scripts/: build_grants_parquet.py  rebuild_features.py  refresh_filings.py  score_today.py  send_alerts.py  verify_case_studies.py
src/dark_arts/: __init__.py  paths.py
src/dark_arts/alert/: __init__.py
src/dark_arts/backtest/: __init__.py
src/dark_arts/features/: __init__.py
src/dark_arts/graph/: __init__.py
src/dark_arts/ingest/: __init__.py  form4.py
src/dark_arts/label/: __init__.py
src/dark_arts/parse/: __init__.py  form4.py
src/dark_arts/score/: __init__.py
src/dark_arts/watchlist/: __init__.py
tests/: test_form4_ingest.py  test_form4_parse.py  test_smoke.py
tests/fixtures/: form4_sample.xml
