[project]
name = "dark-arts-tracker"
version = "0.1.0"
description = "Detect MNPI-adjacent equity grants and other corporate dark-arts patterns from SEC filings."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "sb4422" }]
dependencies = [
    # SEC filing ingestion + parsing
    "datamule",
    "doc2dict",
    # Data layer
    "polars",
    "duckdb",
    "pyarrow",
    # Modeling
    "pymc",
    "numpy",
    "scipy",
    "scikit-learn",
    # LLM extraction (Form 4 footnotes, merger backgrounds)
    "anthropic",
    # Plotting / notebooks
    "plotly",
    "matplotlib",
    # Utilities
    "httpx",
    "tqdm",
    "python-dateutil",
    "pydantic>=2",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    "ipykernel",
    "jupyterlab",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dark_arts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
